--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "mongoose": "^6.9.2",
     "passport": "^0.6.0",
     "passport-github": "^1.1.0",
+    "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0"
